# ddd_template

./: Dockerfile  README.md  makefile  pyproject.toml
src/adapters/: __init__.py  cli.py  hello.py  server.py
src/app/: __init__.py  helloer.py
src/domain/model/: __init__.py  base.py
src/domain/service/: __init__.py
src/infra/: eventstore.py
src/infra/db/: repository.py  uow.py
src/infra/mq/: mailbox.py
tests/: conftest.py  test_helloer.py
