[tool.poetry]
name = "ddd-template"
version = "0.1.0"
description = ""
authors = ["raceychan <raceychan@gmail.com>"]
readme = "README.md"
packages = [{include = "ddd_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
rich = "^13.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
